# Kophi

./: .gitignore  CMakeLists.txt  README.md
include/Kophi/: JavaAttribute.h  JavaClass.h  JavaConstant.h  JavaInstruction.h  JavaProperty.h  Private.h  Utils.h
src/: JavaAttribute.cpp  JavaClass.cpp  JavaConstant.cpp  JavaInstruction.cpp  JavaProperty.cpp  Private.cpp  Utils.cpp
